# supermarket-offers

./: .gitignore  README.md  docker-compose.yml
crawler/: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml
crawler/docs/architecture/: 0001-parser-protocol.md  0002-parser-test-helpers.md  0003-max-pages-from-env.md
crawler/scraper/: items.py  normalize.py  pipelines.py  settings.py
crawler/scraper/canonical/: __init__.py  brands.py  embedding_matcher.py  extractors.py  grouper.py  matcher.py
crawler/scraper/clients/: __init__.py  backend.py
crawler/scraper/parsers/: __init__.py  ab.py  lidl.py  masoutis.py  mymarket.py  sklavenitis.py
crawler/scraper/spiders/: _config.py  ab.py  lidl.py  masoutis.py  mymarket.py  sklavenitis.py
crawler/scripts/: ab_investigate.py  canon_explore.py  canonicalise.py
crawler/tests/: _fixtures.py  test_ab_parser.py  test_ab_parser_families.py  test_backend_client.py  test_lidl_parser.py  test_masoutis_parser.py  test_mymarket_parser.py  test_mymarket_spider.py  test_normalize.py  test_parser_registry.py  test_sklavenitis_parser.py  test_spider_config.py
crawler/tests/canonical/: test_canonical_size.py  test_canonicalise_script.py  test_embedding_matcher_integration.py  test_extract_manufacturer.py  test_grouper_block_size.py  test_matcher.py  test_pack_count.py  test_pipeline_integration.py  test_pipeline_with_embeddings.py  test_variant_tokens.py
crawler/tests/fixtures/ab/: productlist-all-pages.json  productlist-page0.json  productlist-promo-families.json
crawler/tests/fixtures/lidl/: listing.html  listing_current.html
crawler/tests/fixtures/masoutis/: promoitem-page0.json
(+163 files in other folders)
